--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE>
 <html>
     <head>
+        <meta charset="UTF-8"/>
         <title>Launch Checklist</title>
-        <link rel = "stylesheet" type = "text/css" href = "styles.css" />
-        <script src = "script.js"></script>
+        <link rel = "stylesheet" type = "text/css" href="styles.css" />
+        <script src ="scriptDoms.js"></script>
     </head>
+    
     <body>
         <h1>Launch Checklist Form</h1>
         <div id="missionTarget">
@@ -16,15 +18,15 @@
                     <label>Pilot Name <input type="text" name="pilotName" id="pilotName"/></label>
                 </div>
                 <div style="display:flex; flex-direction: row; justify-content: center; align-items: center; margin: 8 0;">
-                    <label>Co-pilot Name <input type="text" name="copilotName"/></label>
+                    <label>Co-pilot Name <input type="text" name="copilotName" id= "coPilotName"/></label>
                 </div>
                 <div style="display:flex; flex-direction: row; justify-content: center; align-items: center; margin: 8 0;">
-                    <label>Fuel Level (L) <input type="text" name="fuelLevel"/></label> 
+                    <label>Fuel Level (L) <input type="text" name="fuelLevel" id = "fuelLevel"/></label> 
                 </div>
                 <div style="display:flex; flex-direction: row; justify-content: center; align-items: center; margin: 8 0;">
-                    <label>Cargo Mass (kg) <input type="text" name="cargoMass"/></label>
+                    <label>Cargo Mass (kg) <input type="text" name="cargoMass" id= "fuelLevel"/></label>
                 </div>
-                <button type = "button" id="formSubmit">Submit</button>
+                <button type = 'button' id="formSubmit">Submit</button>
             </form>
         </div>
         <div id="launchStatusCheck">
