--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE>
 <html>
     <head>
         <meta charset="UTF-8"/>
         <title>Launch Checklist</title>
         <link rel = "stylesheet" type = "text/css" href="styles.css" />
-        <script src ="scriptDoms.js"></script>
+        <script src ="launchScript.js"></script>
     </head>
     
     <body>
@@ -26,7 +25,7 @@
                 <div style="display:flex; flex-direction: row; justify-content: center; align-items: center; margin: 8 0;">
                     <label>Cargo Mass (kg) <input type="text" name="cargoMass" id= "fuelLevel"/></label>
                 </div>
-                <button type = 'button' id="formSubmit">Submit</button>
+                <button type='button' id="formSubmit">Submit</button>
             </form>
         </div>
         <div id="launchStatusCheck">
